<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleMain"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_for_image_btn"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitleMain"
            app:layout_constraintEnd_toStartOf="@+id/ibBookmark"
            app:layout_constraintTop_toTopOf="@+id/tvTitleMain" />

        <ImageButton
            android:id="@+id/ibBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_for_image_btn"
            android:contentDescription="@string/bookmark"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitleMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitleMain" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleMain"
            app:tabGravity="fill"
            app:tabIconTint="@color/white"
            app:tabIndicatorAnimationDuration="@integer/material_motion_duration_short_1"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/secondary_white"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="bottom"
            app:tabIndicatorHeight="2dp"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabRippleColor="@color/secondary_black"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextTabLayout"
            app:tabTextColor="@color/secondary_white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>